--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,5 +9,5 @@ build:
   verbosity: minimal
 deploy_script:
 - cmd: >-
-    dotnet pack ./allure-csharp-commons-v2/Allure.Commons/Allure.Commons.csproj /p:Version=%APPVEYOR_BUILD_VERSION%-dev
+    dotnet pack ./allure-csharp-commons-v2/Allure.Commons/Allure.Commons.csproj --version-suffix "dev"/p:Version=%APPVEYOR_BUILD_VERSION%
     appveyor PushArtifact ./allure-csharp-commons-v2/Allure.Commons/bin/debug/Allure.Commons.%APPVEYOR_BUILD_VERSION%-dev.nupkg
