--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -6,16 +6,16 @@
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <plugins>
-      <add name="Allure" type="Runtime" />
+      
       <add name="SpecRun" />
-    </plugins>
-    <stepAssemblies>
-      <stepAssembly assembly="Allure.SpecFlowPlugin" />
-    </stepAssemblies>
+    <add name="Allure" type="Runtime" /></plugins>
+    
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider -->
     <unitTestProvider name="SpecRun" />
-  </specFlow>
+  <stepAssemblies>
+      <stepAssembly assembly="Allure.SpecFlowPlugin" />
+    </stepAssemblies></specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
