--- a/Tests.SpecRun/Tests.SpecRun.csproj
+++ b/Tests.SpecRun/Tests.SpecRun.csproj
@@ -51,9 +51,6 @@
     <Reference Include="Allure.Commons, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Allure.Commons.2.0.9\lib\netstandard1.5\Allure.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Allure.SpecFlowPlugin, Version=2.0.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SpecFlow.Allure.2.0.8-preview\lib\net462\Allure.SpecFlowPlugin.dll</HintPath>
-    </Reference>
     <Reference Include="Castle.Core, Version=4.1.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.1.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
@@ -235,6 +232,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Tags.feature</DependentUpon>
     </Compile>
+    <Compile Include="TestData\Фича с кириллицей.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Фича с кириллицей.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="allureConfig.json" />
@@ -281,9 +283,19 @@
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Tags.feature.cs</LastGenOutput>
     </None>
+    <None Include="TestData\Фича с кириллицей.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Фича с кириллицей.feature.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Allure.SpecFlowPlugin\Allure.SpecFlowPlugin.csproj">
+      <Project>{ecea4eb9-3871-4c3b-a821-c2f4eaf81d9a}</Project>
+      <Name>Allure.SpecFlowPlugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
