proj ref to test project

--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -6,16 +6,17 @@
   <specFlow>
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <plugins>
-      
       <add name="SpecRun" />
-    <add name="Allure" type="Runtime" /></plugins>
-    
+      <add name="Allure" type="Runtime" />
+    </plugins>
+
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider -->
     <unitTestProvider name="SpecRun" />
-  <stepAssemblies>
+    <stepAssemblies>
       <stepAssembly assembly="Allure.SpecFlowPlugin" />
-    </stepAssemblies></specFlow>
+    </stepAssemblies>
+  </specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
