--- a/Tests.SpecRun/Tests.SpecRun.csproj
+++ b/Tests.SpecRun/Tests.SpecRun.csproj
@@ -49,10 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Allure.Commons, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Allure.Commons.2.1.0-preview1.1\lib\netstandard1.5\Allure.Commons.dll</HintPath>
-    </Reference>
-    <Reference Include="Allure.SpecFlowPlugin, Version=2.0.12.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\SpecFlow.Allure.2.0.12-preview2\lib\net462\Allure.SpecFlowPlugin.dll</HintPath>
+      <HintPath>..\packages\Allure.Commons.2.1.0-preview1.2\lib\netstandard1.5\Allure.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=4.1.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.4.1.1\lib\net45\Castle.Core.dll</HintPath>
@@ -293,6 +290,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Allure.SpecFlowPlugin\Allure.SpecFlowPlugin.csproj">
+      <Project>{ecea4eb9-3871-4c3b-a821-c2f4eaf81d9a}</Project>
+      <Name>Allure.SpecFlowPlugin</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
