--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -15,7 +15,7 @@
     <unitTestProvider name="SpecRun" />
     <stepAssemblies>
       <stepAssembly assembly="Allure.SpecFlowPlugin" />
-    </stepAssemblies>
+    <stepAssembly assembly="SpecFlowSharedSteps" /></stepAssemblies>
   </specFlow>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -62,6 +62,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Thread" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
