--- a/Tests.SpecRun/packages.config
+++ b/Tests.SpecRun/packages.config
@@ -18,6 +18,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NLog" version="5.0.0-beta09" targetFramework="net462" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net462" />
+  <package id="SpecFlow.SharedSteps" version="1.0.26" targetFramework="net462" />
   <package id="SpecRun.Runner" version="1.5.2" targetFramework="net462" />
   <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
