--- a/Tests.SpecRun/packages.config
+++ b/Tests.SpecRun/packages.config
@@ -1,24 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Allure.Commons" version="0.0.1" targetFramework="net462" />
-  <package id="Castle.Core" version="4.1.1" targetFramework="net462" />
-  <package id="CsvHelper" version="2.16.3.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.NET.Test.Sdk" version="15.3.0" targetFramework="net462" />
-  <package id="Microsoft.TestPlatform.TestHost" version="15.3.0" targetFramework="net462" />
-  <package id="MimeTypesMap" version="1.0.2" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
-  <package id="NLog" version="5.0.0-beta09" targetFramework="net462" />
-  <package id="SpecFlow" version="2.1.0" targetFramework="net462" />
-  <package id="SpecFlow.SharedSteps" version="1.0.26" targetFramework="net462" />
-  <package id="SpecRun.Runner" version="1.5.2" targetFramework="net462" />
-  <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net462" />
+  <package id="Allure.Commons" version="2.1.1" targetFramework="net461" />
+  <package id="Castle.Core" version="3.2.0" targetFramework="net461" />
+  <package id="CsvHelper" version="2.16.3.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="MimeTypesMap" version="1.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="SpecFlow" version="2.1.0" targetFramework="net461" />
+  <package id="SpecFlow.Allure" version="2.1.1" targetFramework="net461" />
+  <package id="SpecFlow.SharedSteps" version="1.0.26" targetFramework="net461" />
+  <package id="SpecRun.Runner" version="1.5.2" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
 </packages>
