Configurable step table parameters conversion

--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -3,22 +3,23 @@
   <configSections>
     <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
   </configSections>
+  
 
   <specFlow>
     <plugins>
       <add name="Allure" type="Runtime" />
-      <add name="SpecRun" />
-    </plugins>
+      
+    <add name="SpecRun" /></plugins>
     <stepAssemblies>
       <stepAssembly assembly="Allure.SpecFlowPlugin" />
 
-      <stepAssembly assembly="SpecFlowSharedSteps" />
-    </stepAssemblies>
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-    <!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider -->
-    <unitTestProvider name="SpecRun" />
-    <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
-  </specFlow>
+      
+    <stepAssembly assembly="SpecFlowSharedSteps" /></stepAssemblies>
+    
+    
+    
+    
+  <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- use unit test provider SpecRun+NUnit or SpecRun+MsTest for being able to execute the tests with SpecRun and another provider --><unitTestProvider name="SpecRun" /></specFlow>
 
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
