--- a/Tests.SpecRun/Tests.SpecRun.csproj
+++ b/Tests.SpecRun/Tests.SpecRun.csproj
@@ -51,8 +51,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Allure.Commons, Version=0.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Allure.Commons.2.1.1\lib\netstandard2.0\Allure.Commons.dll</HintPath>
+    <Reference Include="Allure.Commons, Version=2.2.0.7, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Allure.Commons.2.2.0.7\lib\netstandard2.0\Allure.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
@@ -146,6 +146,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Invalid Steps.feature</DependentUpon>
     </Compile>
+    <Compile Include="TestData\Labels.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Labels.feature</DependentUpon>
+    </Compile>
     <Compile Include="TestData\Scenario Hooks.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -207,6 +212,10 @@
     <None Include="TestData\Invalid Steps.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Invalid Steps.feature.cs</LastGenOutput>
+    </None>
+    <None Include="TestData\Labels.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Labels.feature.cs</LastGenOutput>
     </None>
     <None Include="TestData\Scenario Hooks.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
