--- a/nuget.config
+++ b/nuget.config
@@ -1,5 +1,6 @@
 <configuration>
   <packageSources>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="Allure.SpecFlowPlugin" value="Allure.SpecFlowPlugin\bin\Debug" />
     <add key="Allure.Commons" value="Allure.Commons\bin\Debug" />
   </packageSources>
