moved to specflow 2.4

--- a/Tests.SpecRun/packages.config
+++ b/Tests.SpecRun/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.0" targetFramework="net461" />
-  <package id="SpecFlow" version="2.2.1" targetFramework="net461" />
-  <package id="SpecFlow.SharedSteps" version="1.0.26" targetFramework="net461" />
-  <package id="SpecRun.Runner" version="1.6.3" targetFramework="net461" />
-  <package id="SpecRun.SpecFlow" version="1.6.3" targetFramework="net461" />
-  <package id="SpecRun.SpecFlow.2-2-0" version="1.6.3" targetFramework="net461" />
+  <package id="Castle.Core" version="4.3.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
+  <package id="SpecFlow.SharedSteps" version="2.0.0" targetFramework="net461" />
+  <package id="SpecRun.Runner" version="1.8.2" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow" version="1.8.2" targetFramework="net461" />
+  <package id="SpecRun.SpecFlow.2-4-0" version="1.8.2" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
