--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -15,6 +15,7 @@
       <stepAssembly assembly="Allure.SpecFlowPlugin" />
       <stepAssembly assembly="SpecFlowSharedSteps" />
     </stepAssemblies>
+    <!--<unitTestProvider name="nunit" />-->
     <unitTestProvider name="SpecRun" />
   </specFlow>
 
