--- a/Tests.SpecRun/App.config
+++ b/Tests.SpecRun/App.config
@@ -9,7 +9,7 @@
   <specFlow>
     <plugins>
       <add name="Allure" type="Runtime" />
-      <add name="SpecRun" />
+      <add name="SpecRun" path="..\packages\specrun.specflow.2-4-0\1.8.2\lib\net45" />
     </plugins>
     <stepAssemblies>
       <stepAssembly assembly="Allure.SpecFlowPlugin" />
