nuget.config fix

--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,6 @@
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="Test Source" value=".\Allure.Commons\bin\Debug" />
+    <add key="Allure.Commons.Debug" value=".\Allure.Commons\bin\Debug" />
   </packageSources>
 </configuration>
