packageSources removed from nuget.config

--- a/nuget.config
+++ b/nuget.config
@@ -2,8 +2,8 @@
   <config>
     <add key="globalPackagesFolder" value="packages" />
   </config>
-  <packageSources>
+  <!--<packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="Allure.Commons.Debug" value=".\Allure.Commons\bin\Debug" />
-  </packageSources>
+  </packageSources>-->
 </configuration>
