allureConfig.json is renamed to allureConfig.Template.json in nuget packages

--- a/nuget.config
+++ b/nuget.config
@@ -2,8 +2,9 @@
   <config>
     <add key="globalPackagesFolder" value="packages" />
   </config>
-  <!--<packageSources>
+  <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="Allure.Commons.Debug" value=".\Allure.Commons\bin\Debug" />
-  </packageSources>-->
+    <add key="Allure.SpecFlowPlugin.Debug" value=".\Allure.SpecFlowPlugin\bin\Debug" />
+  </packageSources>
 </configuration>
