test project refactoring

--- a/nuget.config
+++ b/nuget.config
@@ -4,7 +4,7 @@
   </config>
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-    <add key="Allure.Commons.Debug" value=".\Allure.Commons\bin\Debug" />
-    <add key="Allure.SpecFlowPlugin.Debug" value=".\Allure.SpecFlowPlugin\bin\Debug" />
+    <add key="Allure.Commons.Debug" value="./Allure.Commons/bin/Debug" />
+    <add key="Allure.SpecFlowPlugin.Debug" value="./Allure.SpecFlowPlugin/bin/Debug" />
   </packageSources>
 </configuration>
