Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -10,13 +10,13 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  solution: 'Allure.Commons.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
 - task: DotNetCoreCLI@2
   inputs:
-    command: test
-    projects: $(solution)
+    command: 'test'
+    projects: '**/Allure.Commons.Tests.csproj'
+    arguments: '-c $(buildConfiguration)'
 
