Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -10,10 +10,20 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
+  solution: 'Allure.Commons.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
 steps:
+- task: NuGetToolInstaller@1
+  displayName: 'Use NuGet'
+  inputs:
+    checkLatest: true
+- task: NuGetCommand@2
+  displayName: 'NuGet restore'
+  inputs:
+    restoreSolution: '$(solution)'
+    restoreDirectory: packages
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
