Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -20,6 +20,7 @@ steps:
   inputs:
     checkLatest: true
 - task: NuGetCommand@2
+  enabled: false
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(solution)'
