Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -6,7 +6,7 @@ pool:
   vmImage: 'windows-latest'
 
 variables:
-  solution: 'Allure.Commons.sln'
+  solution: 'allure-csharp.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
@@ -31,8 +31,24 @@ steps:
     restoreSolution: '$(solution)'
     restoreDirectory: packages
 - task: DotNetCoreCLI@2
+  displayName: Test Allure.Commons
   inputs:
     command: 'test'
     projects: '**/Allure.Commons.Tests.csproj'
     arguments: '-c $(buildConfiguration) --no-restore'
 
+- task: DotNetCoreCLI@2
+  displayName: Run SpecFlow features
+  inputs:
+    command: 'test'
+    projects: '**/Allure.Features.csproj'
+    arguments: '-c $(buildConfiguration) --no-restore'
+    publishTestResults: false
+    
+- task: DotNetCoreCLI@2
+  displayName: Test SpecFlow plugin
+  inputs:
+    command: 'test'
+    projects: '**/Allure.SpecFlowPlugin.Tests.csproj'
+    arguments: '-c $(buildConfiguration) --no-restore'
+    publishTestResults: true
