Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -50,7 +50,7 @@ steps:
     azureSubscription: 'AlexB (3b78fad5-1e95-4a49-87b8-6a11dcc91996)'
     scriptLocation: 'inlineScript'
     inlineScript: |
-      mkdir allure-results/history
+      mkdir 'allure-results/history'
       az storage blob download-batch --account-name allure --account-key $(AZURE_KEY) -s $web -d allure-results/ --pattern history/*
       npm install allure-commandline -g
       allure generate
