Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -9,6 +9,7 @@ variables:
   solution: 'allure-csharp.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
 
 steps:
 - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
@@ -46,14 +47,15 @@ steps:
 
 - task: AzureCLI@2
   displayName: 'Generate Allure report'
+  condition: and(succeeded(), eq(variables.is_master, true))
   inputs:
     azureSubscription: 'AlexB (3b78fad5-1e95-4a49-87b8-6a11dcc91996)'
     scriptType: 'pscore'
     scriptLocation: 'inlineScript'
     inlineScript: |
       mkdir allure-results/history
-      az storage blob download-batch --account-name allure --account-key $(AZURE_KEY) -s $web -d allure-results/ --pattern history/*
+      az storage blob download-batch --account-name allure --account-key $(AZURE_KEY) -s '$web' -d allure-results/ --pattern history/*
       npm install allure-commandline -g
       allure generate
-      az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d $web -s ./allure-report
+      az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d '$web' -s ./allure-report
     workingDirectory: 'Allure.Features/bin/netcoreapp3.1'
