Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -47,7 +47,7 @@ steps:
 
 - task: AzureCLI@2
   displayName: 'Generate Allure report'
-  condition: and(succeeded(), eq(variables.is_master, true))
+  condition: and(succeeded(), eq(variables.isMaster, true))
   inputs:
     azureSubscription: 'AlexB (3b78fad5-1e95-4a49-87b8-6a11dcc91996)'
     scriptType: 'pscore'
