Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -13,6 +13,7 @@ variables:
 
 steps:
 - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
+  enabled: false
   displayName: 'Set Assembly Manifest Data'
   inputs:
     GeneratePackageOnBuild: true
@@ -20,6 +21,7 @@ steps:
     FileVersionNumber: '$(Build.BuildNumber)'
     InformationalVersion: '$(Build.BuildNumber)'
     PackageVersion: '$(Build.BuildNumber)'
+    
 - task: NuGetToolInstaller@1
   enabled: true
   displayName: 'Use NuGet'
@@ -44,6 +46,19 @@ steps:
     projects: '**/Allure.SpecFlowPlugin.Tests.csproj'
     arguments: '-c $(buildConfiguration) --no-restore'
     publishTestResults: true
+  
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'pack'
+    packagesToPack: '**/*.csproj'
+    includesymbols: true
+    versioningScheme: 'byBuildNumber'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
 
 - task: AzureCLI@2
   displayName: 'Generate Allure report'
@@ -59,3 +74,4 @@ steps:
       allure generate
       az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d '$web' -s ./allure-report
     workingDirectory: 'Allure.Features/bin/netcoreapp3.1'
+
