Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -51,8 +51,10 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: '**/*.csproj'
+    nobuild: true
     includesymbols: true
     versioningScheme: 'byBuildNumber'
+    verbosityPack: 'Normal'
 
 - task: PublishBuildArtifacts@1
   inputs:
