Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -48,9 +48,10 @@ steps:
     publishTestResults: true
   
 - task: DotNetCoreCLI@2
+  displayName: Create packages
   inputs:
     command: 'pack'
-    packagesToPack: '**/*.csproj'
+    packagesToPack: '$(solution)'
     nobuild: true
     includesymbols: true
     versioningScheme: 'byBuildNumber'
