Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -23,23 +23,25 @@ steps:
     PackageVersion: '$(Build.BuildNumber)'
     
 - task: NuGetToolInstaller@1
-  enabled: true
+  enabled: false
   displayName: 'Use NuGet'
   inputs:
     checkLatest: true
 - task: NuGetCommand@2
-  enabled: true
+  enabled: false
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(solution)'
     restoreDirectory: packages
 - task: DotNetCoreCLI@2
+  enabled: false
   displayName: Test Allure.Commons
   inputs:
     command: 'test'
     projects: '**/Allure.Commons.Tests.csproj'
     arguments: '-c $(buildConfiguration) --no-restore'   
 - task: DotNetCoreCLI@2
+  enabled: false
   displayName: Test SpecFlow plugin
   inputs:
     command: 'test'
@@ -48,6 +50,7 @@ steps:
     publishTestResults: true
   
 - task: DotNetCoreCLI@2
+  enabled: false
   displayName: Create packages
   inputs:
     command: 'pack'
@@ -57,6 +60,12 @@ steps:
     versioningScheme: 'byBuildNumber'
     verbosityPack: 'Normal'
 
+- script: |
+    dotnet build -c $(buildConfiguration) $(solution)
+    dotnet pack -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) --include-symbols $(solution)
+  displayName: Build and pack
+
+
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
@@ -64,6 +73,7 @@ steps:
     publishLocation: 'Container'
 
 - task: AzureCLI@2
+  enabled: false
   displayName: 'Generate Allure report'
   condition: and(succeeded(), eq(variables.isMaster, true))
   inputs:
