Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -13,7 +13,7 @@ variables:
 
 steps:
 - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
-  enabled: false
+  enabled: true
   displayName: 'Set Assembly Manifest Data'
   inputs:
     GeneratePackageOnBuild: true
@@ -23,29 +23,31 @@ steps:
     PackageVersion: '$(Build.BuildNumber)'
     
 - task: NuGetToolInstaller@1
-  enabled: false
+  enabled: true
   displayName: 'Use NuGet'
   inputs:
     checkLatest: true
 - task: NuGetCommand@2
-  enabled: false
+  enabled: true
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(solution)'
     restoreDirectory: packages
 - task: DotNetCoreCLI@2
-  enabled: false
-  displayName: Test Allure.Commons
+  enabled: true
+  displayName: Build $(solution)
   inputs:
-    command: 'test'
-    projects: '**/Allure.Commons.Tests.csproj'
-    arguments: '-c $(buildConfiguration) --no-restore'   
+    command: 'build'
+    projects: '$(solution)'
+    arguments: '-c $(buildConfiguration) --no-restore'
 - task: DotNetCoreCLI@2
   enabled: false
-  displayName: Test SpecFlow plugin
+  displayName: Run tests
   inputs:
     command: 'test'
-    projects: '**/Allure.SpecFlowPlugin.Tests.csproj'
+    projects: |
+      **/Allure.Commons.Tests.csproj
+      **/Allure.SpecFlowPlugin.Tests.csproj
     arguments: '-c $(buildConfiguration) --no-restore'
     publishTestResults: true
   
@@ -60,15 +62,9 @@ steps:
     versioningScheme: 'byBuildNumber'
     verbosityPack: 'Normal'
 
-- script: |
-    dotnet build -c $(buildConfiguration) $(solution)
-    dotnet pack -c $(buildConfiguration) -o $(Build.ArtifactStagingDirectory) --include-symbols $(solution)
-  displayName: Build and pack
-
-
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    PathtoPublish: '$(Build.SourcesDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
