Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -27,21 +27,24 @@ steps:
   displayName: 'Use NuGet'
   inputs:
     checkLatest: true
+
 - task: NuGetCommand@2
   enabled: true
   displayName: 'NuGet restore'
   inputs:
     restoreSolution: '$(solution)'
     restoreDirectory: packages
+
 - task: DotNetCoreCLI@2
   enabled: true
   displayName: Build $(solution)
   inputs:
     command: 'build'
     projects: '$(solution)'
-    arguments: '-c $(buildConfiguration) --no-restore'
+    arguments: '-c $(buildConfiguration) --no-restore /p:PackageOutputPath=$(Build.ArtifactStagingDirectory)'
+
 - task: DotNetCoreCLI@2
-  enabled: false
+  enabled: true
   displayName: Run tests
   inputs:
     command: 'test'
@@ -51,20 +54,10 @@ steps:
     arguments: '-c $(buildConfiguration) --no-restore'
     publishTestResults: true
   
-- task: DotNetCoreCLI@2
-  enabled: false
-  displayName: Create packages
-  inputs:
-    command: 'pack'
-    packagesToPack: '$(solution)'
-    nobuild: true
-    includesymbols: true
-    versioningScheme: 'byBuildNumber'
-    verbosityPack: 'Normal'
-
 - task: PublishBuildArtifacts@1
+  enabled: true
   inputs:
-    PathtoPublish: '$(Build.SourcesDirectory)'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
