Update allure-commons.yml for Azure Pipelines

--- a/.azure/allure-commons.yml
+++ b/.azure/allure-commons.yml
@@ -12,6 +12,13 @@ variables:
   isMaster: $[eq(variables['Build.SourceBranch'], 'refs/heads/master')]
 
 steps:
+- script: |
+    git tag $(Build.BuildNumber)
+    git push origin $(Build.BuildNumber)
+  enabled: true
+  condition: and(succeeded(), eq(variables.isMaster, true))
+  displayName: Tag sources
+
 - task: bleddynrichards.Assembly-Info-Task.Assembly-Info-NetCore.Assembly-Info-NetCore@2
   enabled: true
   displayName: 'Set Assembly Manifest Data'
@@ -61,16 +68,6 @@ steps:
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
-- task: NuGetCommand@2
-  enabled: true
-  condition: and(succeeded(), eq(variables.isMaster, true))
-  displayName: Push packages
-  inputs:
-    command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.*nupkg'
-    nuGetFeedType: 'external'
-    publishFeedCredentials: 'AlexBakanov'
-
 - task: AzureCLI@2
   enabled: true
   displayName: 'Generate Allure report'
@@ -86,3 +83,13 @@ steps:
       allure generate
       az storage blob upload-batch --account-name allure --account-key $(AZURE_KEY) -d '$web' -s ./allure-report
     workingDirectory: 'Allure.Features/bin/netcoreapp3.1'
+
+- task: NuGetCommand@2
+  enabled: true
+  condition: and(succeeded(), eq(variables.isMaster, true))
+  displayName: Push packages
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg'
+    nuGetFeedType: 'external'
+    publishFeedCredentials: 'AlexBakanov'
